--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -28,39 +28,39 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/security_textView_alarm" />
 
+    <ImageView
+        android:id="@+id/security_imageView_shield"
+        android:layout_width="312dp"
+        android:layout_height="356dp"
+        android:src="@drawable/shield"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.429" />
+
+    <ImageView
+        android:id="@+id/security_imageView_unshield"
+        android:layout_width="312dp"
+        android:layout_height="356dp"
+        android:src="@drawable/unshield"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.429" />
+
     <TextView
-        android:id="@+id/security_textView_titleReport"
+        android:id="@+id/security_textView_shieldedStat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="REPORT"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/security_textView_alarm"
-        app:layout_constraintTop_toBottomOf="@+id/security_textView_alarm" />
+        android:layout_marginTop="20dp"
+        android:text="Click the shield to secure your home"
+        app:layout_constraintEnd_toEndOf="@+id/security_imageView_unshield"
+        app:layout_constraintStart_toStartOf="@+id/security_imageView_unshield"
+        app:layout_constraintTop_toBottomOf="@+id/security_imageView_unshield" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/security_textView_titleReport">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/security_textView_report"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TextView" />
-        </LinearLayout>
-    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
