--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,6 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
-    <color name="temp_text">#FFFFFF</color>
+    <color name="sensorRoom_text">#7834F1</color>
+    <color name="roomOnOff_text">#FF6736</color>
 </resources>
