--- a/app/src/main/res/layout/activity_security.xml
+++ b/app/src/main/res/layout/activity_security.xml
@@ -36,7 +36,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Click the shield to secure your home"
+        android:text="Tap the shield to secure your home"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="@+id/security_imageView_unshield"
         app:layout_constraintStart_toStartOf="@+id/security_imageView_unshield"
         app:layout_constraintTop_toBottomOf="@+id/security_imageView_unshield" />
