--- a/app/src/main/res/layout/activity_security_options.xml
+++ b/app/src/main/res/layout/activity_security_options.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="24dp"
-        android:text="Security Features"
+        android:text="Override Security Features"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +39,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/security_textView_alarm2" />
 
+    <Switch
+        android:id="@+id/security_switch_alarm2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/security_switch_alarm"
+        app:layout_constraintTop_toTopOf="@+id/textView2" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -46,12 +54,27 @@
         android:layout_marginTop="16dp"
         android:text="Security Sensors"
         app:layout_constraintStart_toStartOf="@+id/security_textView_alarm2"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Manually on/off the alarm sound"
+        android:textColor="#F44336"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/security_switch_alarm"
+        app:layout_constraintStart_toStartOf="@+id/security_textView_alarm2"
         app:layout_constraintTop_toBottomOf="@+id/security_textView_alarm2" />
 
-    <Switch
-        android:id="@+id/security_switch_alarm2"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="@+id/security_switch_alarm"
-        app:layout_constraintTop_toTopOf="@+id/textView2" />
+        android:text="Manually turn on/off sensors"
+        android:textColor="#F44336"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="@+id/security_switch_alarm2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
