--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="black">#000000</color>
     <color name="sensorRoom_text">#7834F1</color>
-    <color name="roomOnOff_text">#FF6736</color>
+    <color name="brightness_text">#FF6736</color>
 </resources>
